src/init.h
@@ -7,12 +7,12 @@
    modify it under the terms of the GNU Lesser General Public License
    as published by the Free Software Foundation; either version 2.1 of
    the License, or (at your option) any later version.
- 
+
    libgpg-error is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
    Lesser General Public License for more details.
- 
+
    You should have received a copy of the GNU Lesser General Public
    License along with this program; if not, see <https://www.gnu.org/licenses/>.
  */
@@ -46,6 +46,9 @@ struct tls_space_s
   /* Flag used by w32-gettext.  */
   int gt_use_utf8;
 };
+
+/* Force UTF8 for new threads.  */
+void _gpgrt_w32_utf8_for_new_threads (void);
 
 /* Return the TLS.  */
 struct tls_space_s *get_tls (void);
